-----------------------------------------------------

ChangeLog

0.3.0   2007-07-10  Qt4 migration was complete.

- Qt4 migration was complete. Care must be taken with this new
  configuration file and location: this release starts a new one
  from scratch and won't reuse any of the previous existing ones,
  although cut and paste might help if you know what you're doing :)


0.2.23   2007-07-02  JACK MIDI support debut.

- JACK MIDI support is now being introduced. Connections window
  now has a brand new MIDI tab, the older being renamed to ALSA,
  as for the ALSA/MIDI sequencer conveniency. The server settings
  now include the MIDI driver setup option (ALSA backend only).

- Application icon is now installed to ${prefix}/share/pixmaps;
  application desktop entry file is now included in installation;
  spec file (RPM) is now a bit more openSUSE compliant; initial
  debianization.

- Invalidation of the JACK client handle is now forced right on 
  jack_shutdown notification, preventing a most probable fatal
  crash due to jack_deactivate and/or jack_client_close being
  called after the jack_watchdog kicks in.

- Default font option names were adjusted to "Sans Serif" and
  "Monospace", wherever available.

- The "keep child windows always on top" option is not set as
  default anymore, because window focus behavior gets tricky
  on some desktop environments (eg. Mac OS X, Gnome).

- Autoconf (configure) scripting gets an update.


0.2.22   2007-03-31  Long overdue but better late than never.

- Fixed default settings for the freebob backend (JACK >= 0.103.0).

- CPU Load status label now says correctly DSP Load.

- The most recently used patchbay definitions can now be correctly
  selected in round-robin fashion from its drop-down list widget.

- Avoid mixing JACK MIDI ports with regular audio ports on the
  Connections and Patchbay widgets; strictly list only audio ports.

- Added 192k sample rate to setup settings drop down list (as kindly