@@ -304,6 +304,11 @@
               <string>freebob</string>
              </property>
             </item>
+            <item>
+             <property name="text" >
+              <string>firewire</string>
+             </property>
+            </item>
            </widget>
           </item>
          </layout>
